--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Manrope';
+  src: url("src/assets/fonts/Manrope-Medium.woff") format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   padding: 0.5em;
   margin: 0;
