--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Manrope';
-  src: url("src/assets/fonts/Manrope-Medium.woff") format('woff');
+  src: url("./assets/fonts/Manrope-Medium.woff") format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -22,4 +22,12 @@ code {
 
 .tokens-table td {
   vertical-align: middle;
+}
+
+.background-color-blue {
+  background-color: #5F8AFA;
+}
+
+.background-color-grey {
+  background-color: #3F4246;
 }
