App Context, Switcher component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,10 @@
 body {
   padding: 0.5em;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+/*  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif;*/
+  font-family: Manrope, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -30,4 +31,23 @@ code {
 
 .background-color-grey {
   background-color: #3F4246;
+}
+
+.padding-10-0 {
+  padding: 10px 0;
+}
+
+.flexSpaceBetween {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flexBasis5 {
+  flex-basis: 5%;
 }
